# SuperClipboard

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
docs/superpowers/plans/: 2026-06-05-superclipboard-plan.md  2026-06-20-statistics-panel-plan.md
docs/superpowers/specs/: 2025-06-19-custom-hotkey-design.md  2026-06-05-superclipboard-design.md  2026-06-20-statistics-panel-design.md
public/: preview.html
scripts/: generate-test-data.mjs  generate_social_preview.ps1  package-portable.mjs
src/: App.css  App.tsx  api.ts  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  export.rs  hotkey.rs  lib.rs  main.rs  models.rs  storage.rs  tray.rs
src/components/: AboutDialog.tsx  BackupDialog.tsx  CardList.tsx  ClipboardCard.tsx  ClipboardPanel.tsx  CopyToast.tsx  DatePicker.tsx  ExportDialog.tsx  HotkeyInput.tsx  ScrollArea.tsx  SearchBar.tsx  SettingsPanel.tsx  StatisticsDialog.tsx  SvgIcon.tsx  TabBar.tsx  TemplateCard.tsx  TemplateList.tsx
src/components/cards/: FileCard.tsx  ImageCard.tsx  TextCard.tsx
src/locales/: en-US.json  index.ts  zh-CN.json
src/utils/: format.ts
