[package]
name = "superclipboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "superclipboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
zip = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
windows-sys = { version = "0.52", features = [
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
] }
